// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CourseInfoPage Component renders course info with no professors 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui header"
      >
        COMS 4771
         
        Machine Learning
      </div>
      Department:
      <a
        href="/department/1"
      >
        <span>
           
          Computer Science
           
        </span>
      </a>
      <div
        class="accordion ui"
      >
        <div
          class="title"
        >
          <i
            aria-hidden="true"
            class="angle down icon"
          />
          Show
           all professors who teach this course
        </div>
        <div
          class="content"
        >
          <table
            class="ui table"
          >
            <tbody />
          </table>
        </div>
      </div>
      <a
        href="/review"
      >
        <button
          class="ui yellow button"
        >
          WRITE A REVIEW FOR 
          Machine Learning
        </button>
      </a>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui header"
    >
      COMS 4771
       
      Machine Learning
    </div>
    Department:
    <a
      href="/department/1"
    >
      <span>
         
        Computer Science
         
      </span>
    </a>
    <div
      class="accordion ui"
    >
      <div
        class="title"
      >
        <i
          aria-hidden="true"
          class="angle down icon"
        />
        Show
         all professors who teach this course
      </div>
      <div
        class="content"
      >
        <table
          class="ui table"
        >
          <tbody />
        </table>
      </div>
    </div>
    <a
      href="/review"
    >
      <button
        class="ui yellow button"
      >
        WRITE A REVIEW FOR 
        Machine Learning
      </button>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CourseInfoPage Component renders course info with professor 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ui header"
      >
        COMS 4771
         
        Machine Learning
      </div>
      Department:
      <a
        href="/department/1"
      >
        <span>
           
          Computer Science
           
        </span>
      </a>
      <div
        class="accordion ui"
      >
        <div
          class="title"
        >
          <i
            aria-hidden="true"
            class="angle down icon"
          />
          Show
           all professors who teach this course
        </div>
        <div
          class="content"
        >
          <table
            class="ui table"
          >
            <tbody>
              <tr
                class=""
              >
                <td
                  class=""
                >
                  <a
                    href="/professor/1"
                  >
                    <span>
                      Nakul
                       
                      Verma
                    </span>
                  </a>
                </td>
                <td
                  class=""
                >
                  <span>
                    <a
                      href="/department/1"
                    >
                      <span>
                         
                        Computer Science
                         
                      </span>
                    </a>
                    , 
                  </span>
                  <span>
                    <a
                      href="/department/3"
                    >
                      <span>
                         
                        Mathematics
                         
                      </span>
                    </a>
                    
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <a
        href="/review"
      >
        <button
          class="ui yellow button"
        >
          WRITE A REVIEW FOR 
          Machine Learning
        </button>
      </a>
    </div>
  </body>,
  "container": <div>
    <div
      class="ui header"
    >
      COMS 4771
       
      Machine Learning
    </div>
    Department:
    <a
      href="/department/1"
    >
      <span>
         
        Computer Science
         
      </span>
    </a>
    <div
      class="accordion ui"
    >
      <div
        class="title"
      >
        <i
          aria-hidden="true"
          class="angle down icon"
        />
        Show
         all professors who teach this course
      </div>
      <div
        class="content"
      >
        <table
          class="ui table"
        >
          <tbody>
            <tr
              class=""
            >
              <td
                class=""
              >
                <a
                  href="/professor/1"
                >
                  <span>
                    Nakul
                     
                    Verma
                  </span>
                </a>
              </td>
              <td
                class=""
              >
                <span>
                  <a
                    href="/department/1"
                  >
                    <span>
                       
                      Computer Science
                       
                    </span>
                  </a>
                  , 
                </span>
                <span>
                  <a
                    href="/department/3"
                  >
                    <span>
                       
                      Mathematics
                       
                    </span>
                  </a>
                  
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <a
      href="/review"
    >
      <button
        class="ui yellow button"
      >
        WRITE A REVIEW FOR 
        Machine Learning
      </button>
    </a>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
